chore: add ESLint and Prettier configuration for Angular project
- Add .eslintrc.js with Angular and Prettier integration
- Add .prettierrc and .prettierignore for code formatting
- Update package.json scripts for linting and formatting
- Add Angular ESLint and Prettier dependencies to devDependencies
- Update angular.json to include lint builder
- Add VSCode settings for ESLint and HTML formatting

--- a/angular.json
+++ b/angular.json
@@ -87,9 +87,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src/**/*.ts"]
           }
         }
       }
