ci: add GitHub Actions workflow for deployment
- Create .github/workflows/deploy.yml for automated deployment
- Add build:gh-pages script to package json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:gh-pages": "npm run build -- --configuration=production --base-href=/vb-pavel-nikitsin-app/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
