--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ngrx/component-store": "^19.2.1",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/entity": "^19.2.1",
     "@ngrx/router-store": "^19.2.1",
