--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,18 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
-      - name: Build Angular app
+      - name: Prepare environment.ts
         run: |
           echo "export const environment = { configuration: 'prod', tmdbApiURL: 'https://api.themoviedb.org/3', tmdbApiKey: '${{ secrets.TMDB_API_KEY }}' };" > src/environment.ts
-          npm run build:gh-pages
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Run unit tests
+        run: npm run test -- --watch=false --browsers=ChromeHeadless --code-coverage
+
+      - name: Build Angular app
+        run: npm run build:gh-pages
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
